--- a/Lab6_Pub/Lab6_Pub/Lab6_Pub.csproj
+++ b/Lab6_Pub/Lab6_Pub/Lab6_Pub.csproj
@@ -54,6 +54,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Chair.cs" />
+    <Compile Include="Glass.cs" />
     <Compile Include="Waitress.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
