--- a/Lab6_Pub/Lab6_Pub/Lab6_Pub.csproj
+++ b/Lab6_Pub/Lab6_Pub/Lab6_Pub.csproj
@@ -56,6 +56,7 @@
     </ApplicationDefinition>
     <Compile Include="Chair.cs" />
     <Compile Include="Glass.cs" />
+    <Compile Include="Patron.cs" />
     <Compile Include="Waitress.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
